# django-react-auth-starter

./: .gitignore  README.md
api/: .env.example  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/accounts/: __init__.py  admin.py  apps.py  email.py  models.py  serializers.py  urls.py  views.py
api/accounts/migrations/: 0001_add_user_profile_fields.py  0001_initial.py
api/accounts/templates/accounts/email/: activation.html  confirmation.html  password_changed_confirmation.html  password_reset.html
api/accounts/tests/: test_api_keys.py  test_jwt.py  test_logout.py  test_models.py  test_profile.py  test_registration.py
api/config/: __init__.py  urls.py  wsgi.py
api/config/settings/: base.py  development.py  production.py  testing.py
api/requirements/: base.txt  dev.txt
docs/: AUTH-API.md
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/auth/: AuthLayout.tsx  GuestRoute.tsx  PasswordInput.tsx  ProtectedRoute.tsx  index.ts
web/src/components/illustrations/: CertificateIllustration.tsx  ContractIllustration.tsx  InvoiceIllustration.tsx  OutputIllustration.tsx  RenderIllustration.tsx  ReportsIllustration.tsx  SendCodeIllustration.tsx  index.ts
web/src/components/landing/: CTA.tsx  CodeSnippet.tsx  FAQ.tsx  Features.tsx  Footer.tsx  (+6 more)
web/src/context/: AuthContext.tsx
web/src/hooks/: use-auth-mutations.ts  use-auth.ts
web/src/lib/: api-client.ts  auth-api.ts  config.ts
web/src/pages/: DashboardPage.tsx  LandingPage.tsx  index.ts
web/src/types/: auth.ts
(+19 files in other folders)
